extends Control

#Pornirea si oprirea sunetului cand se apeasa un buton 

func _on_Play_button_down():
	$Click.play()
	pass # Replace with function body.

func _on_Play_button_up():
	$Click.stop()
	pass # Replace with function body.
	
func _on_Setting_button_down():
	$Click.play()
	pass # Replace with function body.

func _on_Setting_button_up():
	$Click.stop()
	pass # Replace with function body.

func _on_Credits_button_down():
	$Click.play()
	pass # Replace with function body.

func _on_Credits_button_up():
	$Click.stop()
	pass # Replace with function body.

func _on_Exit_button_down():
	$Click.play()
	pass # Replace with function body.


func _on_Exit_button_up():
	$Click.stop()
	pass # Replace with function body.
